// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Checkbox Default 1`] = `
<div>
  <h3>
    Checkbox checked
  </h3>
  <label
    checked={true}
    className="sc-checkbox sc-bwzfXH jJrNMO"
  >
    <input
      checked={true}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="fas fa-check"
    />
    <span
      className="text sc-bdVaJa hAWWmg"
    >
      interested?
    </span>
  </label>
  <h3>
    Checkbox unchecked
  </h3>
  <label
    checked={false}
    className="sc-checkbox sc-bwzfXH kvDNwS"
  >
    <input
      checked={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="fas fa-check"
    />
    <span
      className="text sc-bdVaJa hAWWmg"
    >
      interested?
    </span>
  </label>
  <h3>
    Checkbox disabled
  </h3>
  <label
    checked={false}
    className="sc-checkbox sc-bwzfXH gVdLqp"
    disabled={true}
  >
    <input
      checked={false}
      disabled={true}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="fas fa-check"
    />
    <span
      className="text sc-bdVaJa hAWWmg"
    >
      interested?
    </span>
  </label>
</div>
`;

exports[`Storyshots Checkbox ThemeProvider 1`] = `
<div>
  <div>
    <h3>
      Checkbox checked
    </h3>
    <label
      checked={true}
      className="sc-checkbox sc-bwzfXH ljPWtD"
    >
      <input
        checked={true}
        onChange={[Function]}
        type="checkbox"
      />
      <i
        className="fas fa-check"
      />
      <span
        className="text sc-bdVaJa hAWWmg"
      >
        interested?
      </span>
    </label>
    <h3>
      Checkbox unchecked
    </h3>
    <label
      checked={false}
      className="sc-checkbox sc-bwzfXH IQfvm"
    >
      <input
        checked={false}
        onChange={[Function]}
        type="checkbox"
      />
      <i
        className="fas fa-check"
      />
      <span
        className="text sc-bdVaJa hAWWmg"
      >
        interested?
      </span>
    </label>
    <h3>
      Checkbox disabled
    </h3>
    <label
      checked={false}
      className="sc-checkbox sc-bwzfXH bWZifM"
      disabled={true}
    >
      <input
        checked={false}
        disabled={true}
        onChange={[Function]}
        type="checkbox"
      />
      <i
        className="fas fa-check"
      />
      <span
        className="text sc-bdVaJa hAWWmg"
      >
        interested?
      </span>
    </label>
  </div>
</div>
`;
